fix gitignore added mis-specification transformer for revision
added matching, stratification and SIPW calculation

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.idea/
 /.DS_Store
 /.python-version
-#/pyproject.toml
-#/poetry.lock
 /prop_simulation - Jupyter Notebook_files/
 /deprecated/
+/outputs/
+models_test
